src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_messages_test__unexpected_token_error_message.snap
---
source: src/parser/tests/parse_errors/parse_error_messages_test.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected KeywordEndVar but found ';'
  ┌─ <internal>:2:21
  │
2 │                 VAR ;
  │                     ^ Unexpected token: expected KeywordEndVar but found ';'
